# 3DsMIN

./: .gitignore  .gitmodules  Base.h  CMakeLists.txt  Camera.cpp  Camera.hpp  CubeObject.cpp  CubeObject.hpp  Entity.hpp  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.hpp  Log.h  README.md  Renderer.cpp  Renderer.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture.cpp  Texture.hpp  Vertex.h  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  Window.cpp  Window.hpp  functions.cpp  functions.hpp  main.cpp
Debug/: Debug.cpp  Debug.h
Entity/: Axises.cpp  Axises.h  CubeObject.cpp  CubeObject.hpp  Entity.hpp  EntityManager.cpp  EntityManager.h  Grid.cpp  Grid.h  Mesh.cpp  Mesh.h  PyramidObject.h
Event/: Event.cpp  Event.hpp  KeyEvent.cpp  KeyEvent.hpp  MouseEvent.cpp  MouseEvent.hpp  WindowEvent.cpp  WindowEvent.hpp
Helper/: MeshLoader.cpp  MeshLoader.h
ImGui/: ImGuiUI.cpp  ImGuiUI.h
res/: fragment_color.shader  imgui.ini  light_fragment.shader  vertex_color.shader
src/: Application.cpp  Application.h  Base.h
src/Camera/: Camera.cpp  Camera.hpp
src/Entity/: Axises.cpp  Axises.h  CubeObject.cpp  CubeObject.hpp  Entity.hpp  EntityManager.cpp  EntityManager.h  Grid.h  Mesh.cpp  Mesh.h  PyramidObject.h
src/Event/: Event.cpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
src/Helper/: MeshLoader.cpp  MeshLoader.h
src/ImGui/: ImGuiUI.cpp  ImGuiUI.h
src/Renderer/: Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.hpp  Log.cpp  Log.h  Renderer.cpp  Renderer.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture.cpp  Texture.hpp  Vertex.h  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp
src/Window/: Window.cpp  Window.hpp
src/tests/: Test.hpp  TestTexture.cpp  TestTexture.hpp
tests/: Test.hpp  TestTexture.cpp  TestTexture.hpp
